// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createIssue opens an issue 1`] = `
Array [
  Array [
    Object {
      "body": "a-body.md",
      "labels": undefined,
      "owner": "JasonEtco",
      "repo": "example",
      "title": "My issue",
    },
  ],
]
`;

exports[`createIssue opens an issue 2`] = `
Array [
  Array [
    "a-body.md",
    Object {
      "foo": true,
    },
  ],
]
`;

exports[`createIssue opens an issue with comments 1`] = `
Array [
  Array [
    Object {
      "body": "a-comment.md",
      "number": 1,
      "owner": "JasonEtco",
      "repo": "example",
    },
  ],
  Array [
    Object {
      "body": "another-comment.md",
      "number": 1,
      "owner": "JasonEtco",
      "repo": "example",
    },
  ],
]
`;

exports[`createIssue opens an issue with comments 2`] = `
Array [
  Array [
    "a-body.md",
    Object {
      "foo": true,
    },
  ],
  Array [
    "a-comment.md",
    Object {
      "foo": true,
    },
  ],
  Array [
    "another-comment.md",
    Object {
      "foo": true,
    },
  ],
]
`;

exports[`createIssue opens an issue with labels 1`] = `
Array [
  Array [
    Object {
      "body": "a-body.md",
      "labels": Array [
        "feature request",
        "bug",
      ],
      "owner": "JasonEtco",
      "repo": "example",
      "title": "My issue",
    },
  ],
]
`;
